--- a/macros.cfg
+++ b/macros.cfg
@@ -11,6 +11,7 @@ gcode:
      BED_MESH_CALIBRATE
      G1 Z10 F2400
      G1 X233 Y50 F27000
+     SKEW_PROFILE LOAD=my_skew
 
 [gcode_macro PURGE]
 gcode:     
@@ -160,8 +161,10 @@ gcode:
   SET_TMC_CURRENT STEPPER=stepper_z CURRENT=0.6
   SET_TMC_CURRENT STEPPER=stepper_z1 CURRENT=0.6
   SET_TMC_CURRENT STEPPER=stepper_z2 CURRENT=0.6
+  SET_SKEW CLEAR=1
   M117 Finished...
   RESTORE_GCODE_STATE NAME=end_print_state
+  
 
 [gcode_macro _END_PRINT_PARK]
 gcode:
