--- a/motors.cfg
+++ b/motors.cfg
@@ -7,10 +7,11 @@ step_pin: PC8
 dir_pin: !PC9
 enable_pin: !PA15
 rotation_distance: 40
-microsteps: 32
+microsteps: 16
 full_steps_per_rotation: 200
 endstop_pin: !EBBCan:PB6
 position_endstop: 240
+position_min: -30
 position_max: 240
 homing_speed: 150
 second_homing_speed: 15.0
@@ -25,7 +26,7 @@ step_pin: PA10
 dir_pin: !PA14
 enable_pin: !PA13
 rotation_distance: 40
-microsteps: 32
+microsteps: 16
 full_steps_per_rotation: 200
 endstop_pin: !PD3
 position_endstop: 246
